feat: send message and fix conversationn model
